check user mail and phone
